Closed
Bug 12198
Opened 26 years ago
Closed 26 years ago
Crash When I Click on "Mailto" Link in Message Envelope
Categories
(SeaMonkey :: MailNews: Message Display, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
M11
People
(Reporter: sol, Assigned: mscott)
References
Details
In 3-pane, when reading a message, I click on the name of the sender in the
message envelope. I repeatedly crash.
[Build ID 1999082008]
Steps to reproduce:
1. Start apprunner
2. Open email (Tasks | Messenger)
3. Open a folder for an email account by selecting the folder in the folder pane
4. Display a message by selecting a message from the thread pane
5. In the message envelope, click on the name of the sender of the email message
I crash repeatedly at this point.
I'm using Win95 on a P166 with 32Mb RAM.
Updated•26 years ago
|
Assignee: phil → mscott
Comment 1•26 years ago
|
||
I think this is a URL dispatching problem. Scott, do you own that?
| Assignee | ||
Comment 2•26 years ago
|
||
Yeah url dispatching with necko hasn't been hooked up yet. This bug is a dup. I
just have to dig up the #. I'll post back when I find it.
One bug I found is http://bugzilla.mozilla.org/show_bug.cgi?id=8628. Is this
the one?
Even if the feature is not supported yet, we shouldn't be crashing.
| Assignee | ||
Updated•26 years ago
|
Status: NEW → ASSIGNED
Target Milestone: M10
| Assignee | ||
Comment 5•26 years ago
|
||
Your right Lisa. It shouldn't crash. I'll use this bug to track fixing the
crash and will fix this ASAP. We'll use the other bug you dug up for the actual
feature of hooking up urls in the message window to do things like bring up the
browser, or a compose window.
| Assignee | ||
Updated•26 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 6•26 years ago
|
||
I just checked in the code to prevent us from crashing. But nothing happens yet.
Bug 8628 tracks that feature.
Comment 10•26 years ago
|
||
I'm seeing this crash consistently using 1999092008 on NT 4.0. I haven't yet
been able to get the other platforms up and running to verify there.
| Assignee | ||
Comment 11•26 years ago
|
||
Welcome back Laurel!
mailto links still work fine for me on both my Windows NT machine. In fact they
now actually bring up a compose window.
I'm wondering if your prefs are just out of date or something? Can you bring up
the compose window normally and send a message or do you crash there too?
Updated•26 years ago
|
Target Milestone: M10 → M11
Comment 12•26 years ago
|
||
Not a milestone stopper. M11.
| Assignee | ||
Comment 13•26 years ago
|
||
I've started to see this again too. looks like a regression in the webshell. I
have a one line fix I'm going to get permission to check in for.
| Assignee | ||
Updated•26 years ago
|
Status: REOPENED → RESOLVED
Closed: 26 years ago → 26 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 14•26 years ago
|
||
I just went ahead and checked it in so we don't crash again. Re-closing.
Updated•26 years ago
|
Status: RESOLVED → REOPENED
Comment 15•26 years ago
|
||
REOPEN: clicking any mailto: link crashes apprunner 1999-10-06-09-M11, Win98.
Comment 17•26 years ago
|
||
Update: Just tried it on 1999100616m10 build on win98 and it does crash.
Tried it on the Mac Commercial build too, sorry crashes there too.
1999100614M10
Linux not out yet!
Comment 18•26 years ago
|
||
Let Release Note this for M10. lchiang, can you provide on at:
http://bugzilla.mozilla.org/show_bug.cgi?id=14872
Thanks!
Comment 19•26 years ago
|
||
Will release note for M10 branch. Apparently, still a problem in M11 per
lchiang@netscape.com.
Comment 20•26 years ago
|
||
*** Bug 11883 has been marked as a duplicate of this bug. ***
| Assignee | ||
Updated•26 years ago
|
Status: REOPENED → RESOLVED
Closed: 26 years ago → 26 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 21•26 years ago
|
||
This broke again! I checked in another fix to the webshell to prevent it from
crashing again.
Comment 22•26 years ago
|
||
*** Bug 15662 has been marked as a duplicate of this bug. ***
Comment 23•26 years ago
|
||
*** Bug 15847 has been marked as a duplicate of this bug. ***
Comment 24•26 years ago
|
||
Linux (1999-10-20-11 M11) commercial
Win NT (1999-10-20-11 M11) commercial
Mac (1999-10-20-11 M11) commercial
Clicking on the mailto: link no longer crashes.
| Assignee | ||
Comment 25•26 years ago
|
||
*** Bug 18272 has been marked as a duplicate of this bug. ***
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•