Bug #12198 --> crash when clicking mailto links in the message pane. Also, Use NS_GET_IID